--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
 <h1>
   {{title}}
 </h1>
+<div class="app-content">
+    <md-card>
+        <md-card-title>This is my title</md-card-title>
+        <md-card-content>
+            This is all of the content that I would like to have here, there can be a lot of stuff here but I'm not really sure what all will end up here.
+        </md-card-content>
+    </md-card>
+</div>
